--- a/SwordPointToOffer/.project
+++ b/SwordPointToOffer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SwordPointToOffer</name>
+	<name>Coding</name>
 	<comment></comment>
 	<projects>
 	</projects>
